# System_Prog

./: .gitignore  CMakeLists.txt  vcpkg.json
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: CMakeLists.txt
allocator/allocator_buddies_system/tests/: CMakeLists.txt
allocator/allocator_global_heap/: CMakeLists.txt
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap.cpp  main.cpp
allocator/allocator_global_heap/tests/: CMakeLists.txt
allocator/allocator_red_black_tree/tests/: CMakeLists.txt
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
allocator/allocator_sorted_list/tests/: CMakeLists.txt
